# nexus-ai-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  koyeb.yaml  mypy_report.txt  pyproject.toml  pytest_report.txt  termux_install.sh  todo.md  todo_step3.md  todo_v130.md  todo_v200.md  todo_v21.md
.github/workflows/: ci.yml
docs/: architecture.md  v2-roadmap-strategy.md
scripts/: termux_install.sh
src/nexus_ai_agent/: cli.py  worker.py
src/nexus_ai_agent/agent/: __init__.py  approval.py  feedback.py  self_monitor.py  updater.py
src/nexus_ai_agent/agents/: base.py  chat_agent.py  executor_agent.py  gemma_agent.py  phi_agent.py  planner_agent.py  qwen_agent.py
src/nexus_ai_agent/agents/store/: agent_manager.py  base_agent.py  specialized_agents.py
src/nexus_ai_agent/api/: app.py  dashboard.py
src/nexus_ai_agent/bot/: agent_handlers.py  app.py  handlers.py  knowledge_handlers.py  memory_handlers.py  middleware.py  monitor_handlers.py  rate_limiter.py  tool_handlers.py  update_handlers.py
src/nexus_ai_agent/config/: settings.py
src/nexus_ai_agent/core/: __init__.py  async_db.py  http_client.py  instrumentation.py
src/nexus_ai_agent/features/: ads.py  ai_chat.py  ai_memory.py  analytics.py  anonymous_chat.py  channel_manager.py  engagement.py  force_join.py  games.py  gamification.py  image_gen.py  moderation.py  owner_control.py  personality.py  rag.py  referral.py  speech.py  story_gen.py  summarizer.py  tools.py  viral_engine.py
src/nexus_ai_agent/i18n/: __init__.py  loader.py
src/nexus_ai_agent/i18n/locales/: ar.json  de.json  en.json  es.json  fa.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  pt.json  ru.json  tr.json  zh.json
src/nexus_ai_agent/integrations/: __init__.py  free_tools.py
src/nexus_ai_agent/knowledge/: __init__.py  knowledge_manager.py  web_trainer.py  wikipedia_trainer.py
src/nexus_ai_agent/llm/: __init__.py  fake_llm.py  fallback_provider.py  local_llama_cpp.py  provider.py
src/nexus_ai_agent/memory/: long_term.py  short_term.py
src/nexus_ai_agent/observability/: logging.py
src/nexus_ai_agent/orchestration/: graph.py  router.py  state.py
src/nexus_ai_agent/personality/: engine.py
src/nexus_ai_agent/storage/: __init__.py  ai_storage.py  ai_storage_manager.py  db.py  langgraph_checkpoint.py  model_fetch.py  models.py  unified_cloud.py
src/nexus_ai_agent/storage/providers/: __init__.py  base.py  github_releases.py  huggingface.py  local_cache.py  mega.py  rclone.py
src/nexus_ai_agent/tools/: base.py  files.py  registry.py  system_shell.py
tests/: conftest.py  test_rtl.py
tests/fixtures/telegram_updates/: sample_message.json
tests/integration/: test_agents.py  test_graph.py
tests/unit/: test_agent_store.py  test_ai_memory.py  test_approval.py  test_gdrive.py  test_handlers.py  test_persona_routing.py  test_personality.py  test_presence.py  test_router.py  test_tools_sandbox.py
