[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-ai-agent"
version = "0.1.0"
description = "NEXUS AI agent: offline-first multi-agent orchestration with Telegram integration."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "NEXUS AI" }]
dependencies = [
  "python-telegram-bot>=21.0",
  "langgraph>=0.2",
  "langgraph-checkpoint-sqlite>=1.0",
  "langchain-community>=0.2",
  "sqlmodel>=0.0.19",
  "pydantic-settings>=2.0",
  "sentence-transformers>=3.0",
  "llama-cpp-python>=0.2",
  "structlog>=24.0",
  "sqlite-vec>=0.1",
  "typer>=0.12",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-python-dateutil",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
