[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-ai-agent"
version = "0.1.0"
description = "NEXUS AI agent: offline-first multi-agent orchestration with Telegram integration."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "NEXUS AI" }]
dependencies = [
  "python-telegram-bot>=21.0",
  "langgraph>=0.2",
  "langgraph-checkpoint-sqlite>=1.0",
  "langchain-community>=0.2",
  "sqlmodel>=0.0.19",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "pydantic-settings>=2.0",
    "sentence-transformers>=3.0",
    "llama-cpp-python>=0.2",
    "structlog>=24.0",
    "sqlite-vec>=0.1",
    "typer>=0.12",
    "httpx>=0.27",
    "numpy>=1.26",
    "chromadb>=0.5",
    "flashrank>=0.2",
    "celery>=5.3",
    "redis>=5.0",
    "arabic-reshaper>=3.0",
    "python-bidi>=0.4",
  ]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest-mock>=3.12",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: marks tests as slow"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
mypy_path = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "llama_cpp",
    "gtts",
    "sentence_transformers",
    "langgraph",
    "langgraph.checkpoint.sqlite",
    "langchain_community",
    "mega",
    "sqlite_vec",
    "telegram",
    "telegram.ext",
    "chromadb",
    "flashrank",
    "celery",
    "redis",
    "arabic_reshaper",
    "bidi.algorithm",
]
ignore_missing_imports = true
